<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tTracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_all_tracks">Track Liste</string>
    <string name="title_activity_edit_track">Track bearbeiten</string>
    <string name="title_activity_stats">Statistiken</string>
    <string name="title_activity_stats_simple">Summe</string>
    <string name="title_activity_stats_average">Durchschnitt</string>
    <string name="main_open_create_new_track_label">Start new</string>
    <string name="open_view_all">Track Liste öffnen</string>
    <string name="open_time_filter_stats">Tracks pro Zeitraum</string>
    <string name="open_activity_stats">Statistiken</string>
    <string name="open_activity_stats_simple">Summe pro Kategorie</string>
    <string name="open_activity_stats_average">Durchschnitt pro Kategorie</string>
    <string name="open_activity_view_all_categories">Kategorien verwalten</string>
    <string name="open_create_new_track">Neuen Track starten</string>
    <string name="close_current_track">Aktiven Track stoppen</string>
    <string name="update_current_track">Aktiven Track editieren</string>
    <string name="current_track_label">Aktiver Track:</string>
    <string name="create">Erstellen</string>
    <string name="created_category">Neue Kategorie wurde erstellt: </string>
    <string name="category_already_exists">Kategorie existiert bereits: </string>
    <string name="add">Hinzufügen</string>
    <string name="delete">Löschen</string>
    <string name="update">Aktualisieren</string>
    <string name="location_update">+</string>
    <string name="georef">Adresse</string>
    <string name="now">jetzt</string>
    <string name="today">heute</string>
    <string name="since">seit</string>
    <string name="empty">-</string>
    <string name="error">Unbekannter Fehler</string>
    <string name="none">Kein aktiver Track</string>
    <string name="location">Position (Lat,Long)</string>
    <string name="comment">Kommentar</string>
    <string name="track">Kategorien</string>
    <string name="from">von</string>
    <string name="to">bis</string>
    <string name="started_new_track">Neuer Track gestartet:</string>
    <string name="updated_track">Track aktualisiert:</string>
    <string name="update_track">Bearbeiten</string>
    <string name="delete_track">Löschen</string>
    <string name="export_track_to_calendar">Export an Kalender</string>
    <string name="view_track_in_map">In Karte ansehen</string>
    <string name="no_network">Keine Netzwerkverbindung!</string>
    <string name="address_lookup_start">Adresse wird georeferenziert</string>
    <string name="lat_or_lon_must_be_set">Lat und Lon müssen ausgefüllt sein</string>
    <string name="address_lookup_finish">Adresse gefunden</string>
    <string name="invalid_geocoding_result">Adresse konnte nicht verarbeitet werden</string>
    <string name="web_error">Fehler beim laden der Seite</string>
    <string name="category_name">Kategorie-Name</string>
    <string name="category_comment">Kommentar</string>

    <string-array name="tracks_array">
        <item>Programmieren</item>
        <item>Meeting</item>
        <item>Testing</item>
    </string-array>

    <string name="title_activity_edit_category">Kategorie bearbeiten</string>
    <string name="title_activity_view_all_categories">Kategorien Liste</string>

</resources>
