<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.slart.ttracker.activitiy.MainActivity" >

    <TextView
        android:id="@+id/current_track_label"
        style="@style/FormLabel"
        android:layout_marginTop="0dp"
        android:text="@string/current_track_label" />

    <TextView
        android:id="@+id/current_track_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_track_label"
        android:layout_marginTop="0dp"
        android:textSize="20dp"
        android:text="@string/track" />

    <Button
        android:id="@+id/main_open_create_new_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/current_track_value"
        android:layout_alignRight="@+id/close_current_track"
        android:layout_below="@+id/current_track_value"
        android:layout_marginTop="10dp"
        android:onClick="onOpenCreateNewTrack"
        android:text="@string/open_create_new_track" />

    <Button
        android:id="@+id/close_current_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/current_track_value"
        android:layout_below="@+id/main_open_create_new_track"
        android:onClick="onCloseCurrentTrack"
        android:text="@string/close_current_track" />

    <Button
        android:id="@+id/update_current_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/current_track_value"
        android:layout_below="@+id/close_current_track"
        android:onClick="onUpdateCurrentTrack"
        android:text="@string/update_current_track" />

    <Button
        android:id="@+id/main_open_view_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/current_track_value"
        android:layout_alignRight="@+id/close_current_track"
        android:layout_below="@+id/update_current_track"
        android:onClick="onOpenViewAll"
        android:text="@string/open_view_all" />

    <Button
        android:id="@+id/open_activity_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/current_track_value"
        android:layout_alignRight="@+id/main_open_view_all"
        android:layout_below="@+id/main_open_view_all"
        android:onClick="onOpenActivityStats"
        android:text="@string/open_activity_stats" />
    
    <Button
        android:id="@+id/open_activity_view_all_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/current_track_value"
        android:layout_alignRight="@+id/main_open_view_all"
        android:layout_below="@+id/open_activity_stats"
        android:onClick="onOpenActivityViewAllCategories"
        android:text="@string/open_activity_view_all_categories" />
    
</RelativeLayout>